<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="@dimen/cardview_margin_start"
    android:layout_marginTop="@dimen/cardview_margin_top"
    android:layout_marginEnd="@dimen/cardview_margin_end"
    app:cardBackgroundColor="@color/colorLightGray">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:orientation="vertical">

        <TextView
            android:id="@+id/review_author_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/review_author" />

        <TextView
            android:id="@+id/review_content_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:lines="@string/review_content_lines"
            android:maxLines="@string/review_content_max_lines"
            tools:text="content" />

    </LinearLayout>
</android.support.v7.widget.CardView>